kubernetes/services/epicgames-freegames.yml
---
apiVersion: v1
kind: Service
metadata:
  name: epicgames-freegames
  namespace: default
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    app: epicgames-freegames

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: epicgames-freegames
  namespace: default
spec:
  tls:
    - hosts:
        - epicgames-freegames.${DOMAIN_NAME}
      secretName: ${DOMAIN_NAME}-tls
  rules:
    - host: epicgames-freegames.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: epicgames-freegames
                port:
                  name: web

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: epicgames-freegames
  namespace: default
  labels:
    app: epicgames-freegames
  annotations:
    reloader.stakater.com/auto: "true"
    keel.sh/policy: minor
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@weekly"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: epicgames-freegames
  template:
    metadata:
      labels:
        app: epicgames-freegames
    spec:
      containers:
        - name: app
          image: ghcr.io/claabs/epicgames-freegames-node
          resources:
            requests:
              memory: 64Mi
              cpu: 250m
            limits:
              memory: 256Mi
              cpu: 1000m
          ports:
            - name: web
              containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /usr/app/config
              subPath: config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: epicgames-freegames
